--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
     <h1 style="border:2px solid red;">This going to a title</h1>
     <p>This is going to a paragraph</p>
     <span style="border:2px solid red;">This is going a just some text</span>
-    <span>This is going to the second some text</span>
+    <span>This is going to the second 
+    some text</span> <br/>
+    <br/>
 
 <!-- List -->
-<p>Frontend Technologies</p>
+<!-- <p>Frontend Technologies</p>
 <ul>
     <li>HTML</li>
     <li>CSS</li>
@@ -56,7 +58,16 @@
     <li>React</li>
     <li>Vue</li>
     <li>Angular</li>
-</ol>
+</ol> -->
+<!-- In this section we will learn about link -->
+
+<a href='https://github.com/Asabeneh' target="_blank">GitHub</a>
+<a href="https://www.linkedin.com/in/asabeneh/" target="_blank">LinkedIn</a>
+<a href="https://twitter.com/Asabeneh" target="_blank">Twitter</a>
+
+<img src="./assets/images/html.png" style="width:10%;" alt="HTML Logo" />
+<img src ="./assets/images/css_logo.png" style="width:10%;" alt="CSS logo"/>
+<img src="https://c.files.bbci.co.uk/12A9B/production/_111434467_gettyimages-1143489763.jpg" alt="Cat Photo">
 
 
 </body>
