HTML Formatting elemnts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <!-- This header section section -->
 
 
-    <h1 id="title-1" class="title" style="color:green;font-size:64px;" >Welcome to Washera Academy</h1>
+    <h1 id="title-1" class="title" style="font-size:64px;" >
+        <span style="color:rgb(233, 101, 101)">
+            <strong>
+                <em>Washera</em>
+            </strong>
+        </span>
+        <span style="color:rgb(81, 216, 81);">Academy</span>
+       </h1>
 
     <h2 class="title">This heading 2</h2>
     <h3>This heading 3</h3>
@@ -67,8 +74,22 @@
 
 <img src="./assets/images/html.png" style="width:10%;" alt="HTML Logo" />
 <img src ="./assets/images/css_logo.png" style="width:10%;" alt="CSS logo"/>
-<img src="https://c.files.bbci.co.uk/12A9B/production/_111434467_gettyimages-1143489763.jpg" alt="Cat Photo">
+<p>Lorem <em>ipsum dolor</em> sit, amet consectetur adipisicing elit. Earum illo <b>magnam</b> labore mollitia vel consequatur, in magni minus. Fugiat cum <mark>tempore</mark> asperiores <del>facilis</del>  <strong>alias</strong> <ins>sequi</ins> veritatis, <u>voluptate</u> natus ab quod!</p>
+<pre>
+    slslslslsl
+    sllslslslsl
+    slslslslslslsl
+    slslslslslsss
+
+</pre>
+<p>Sulfuric acid is very explosive inorganic compound(H<sub>2</sub>S0<sub>4</sub>)</p>
+
+2<sup>10</sup> = 1024
 
 
+
+<footer>
+    <small>Copyright 2021 | Asabeneh Yetayeh</small>
+</footer>
 </body>
 </html>
