--- a/index.html
+++ b/index.html
@@ -1,95 +1,89 @@
 <html>
+
 <head>
     <title>Washera Academy | Static website</title>
 </head>
+
 <body>
-
     <!-- This header section section -->
+    <header style="background-color:rgb(240, 168, 75);">
+        <h1 id="title-1" class="title" style="font-size:64px;">
+            <span style="color:rgb(233, 101, 101)">
+                <strong>
+                    <em>Washera</em>
+                </strong>
+            </span>
+            <span style="color:rgb(81, 216, 81);">Academy</span>
+        </h1>
 
+    </header>
+    <main>
 
-    <h1 id="title-1" class="title" style="font-size:64px;" >
-        <span style="color:rgb(233, 101, 101)">
-            <strong>
-                <em>Washera</em>
-            </strong>
-        </span>
-        <span style="color:rgb(81, 216, 81);">Academy</span>
-       </h1>
+        <div>
+            <h1>Introduction</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, minus. Debitis laudantium, accusamus
+                sed enim voluptatibus similique eius molestiae ducimus maiores, labore delectus, dolorem iste. Atque
+                dignissimos obcaecati in fugiat!
+            </p>
 
-    <h2 class="title">This heading 2</h2>
-    <h3>This heading 3</h3>
-    <h4>This is heading 4</h4>
-    <h5>This heading 5</h5>
-    <h6>This heading 6</h6>
-    <p>This going to a paragram</p>
+        </div>
+        <div>
+            <h1>Front end Technologies</h1>
+            <!-- List -->
+            <p>Frontend Technologies</p>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>React</li>
+            </ul>
+            <p>The most popular JavaScript libraries</p>
+            <ol>
+                <li>React</li>
+                <li>Vue</li>
+                <li>Angular</li>
+            </ol>
+        </div>
 
-    <!-- Thi is the footer section -->
+        <div>
+            <h1>Backend Technologies</h1>
+            <p>Backend Technologies</p>
+            <ul>
+                <li>Node</li>
+                <li>Python</li>
+                <li>PHP</li>
+                <li>Java</li>
+                <li>Ruby</li>
+            </ul>
+        </div>
+        <hr />
+        <p>Subscribe to our news letter</p>
+        <input type="email" /> <button>Submit</button>
 
-    <!-- Let see self closing elements -->
-    <span>some text</span> <br />
-    <span>another text</span>
-    <hr />
-    <p>Subscribe to our news letter</p>
-    <input type="email" /> <button>Submit</button>
-    <!-- <img src ="./assets/images/html.png" alt="HTML Logo"/> -->
+        <a href='https://github.com/Asabeneh' target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/asabeneh/" target="_blank">LinkedIn</a>
+        <a href="https://twitter.com/Asabeneh" target="_blank">Twitter</a>
 
-    <!-- 
-        After this you have to know Blocking and non-blocking elements 
-    -->
-    <h1 style="border:2px solid red;">This going to a title</h1>
-    <p>This is going to a paragraph</p>
-    <span style="border:2px solid red;">This is going a just some text</span>
-    <span>This is going to the second 
-    some text</span> <br/>
-    <br/>
-
-<!-- List -->
-<!-- <p>Frontend Technologies</p>
-<ul>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>JavaScript</li>
-    <li>React</li>
-</ul>
-<p>Backend Technologies</p>
-<ul>
-    <li>Node</li>
-    <li>Python</li>
-    <li>PHP</li>
-    <li>Java</li>
-    <li>Ruby</li>
-</ul>
-
-<p>The most popular JavaScript libraries</p>
-<ol>
-    <li>React</li>
-    <li>Vue</li>
-    <li>Angular</li>
-</ol> -->
-<!-- In this section we will learn about link -->
-
-<a href='https://github.com/Asabeneh' target="_blank">GitHub</a>
-<a href="https://www.linkedin.com/in/asabeneh/" target="_blank">LinkedIn</a>
-<a href="https://twitter.com/Asabeneh" target="_blank">Twitter</a>
-
-<img src="./assets/images/html.png" style="width:10%;" alt="HTML Logo" />
-<img src ="./assets/images/css_logo.png" style="width:10%;" alt="CSS logo"/>
-<p>Lorem <em>ipsum dolor</em> sit, amet consectetur adipisicing elit. Earum illo <b>magnam</b> labore mollitia vel consequatur, in magni minus. Fugiat cum <mark>tempore</mark> asperiores <del>facilis</del>  <strong>alias</strong> <ins>sequi</ins> veritatis, <u>voluptate</u> natus ab quod!</p>
-<pre>
+        <img src="./assets/images/html.png" style="width:10%;" alt="HTML Logo" />
+        <img src="./assets/images/css_logo.png" style="width:10%;" alt="CSS logo" />
+        <p>Lorem <em>ipsum dolor</em> sit, amet consectetur adipisicing elit. Earum illo <b>magnam</b> labore mollitia
+            vel consequatur, in magni minus. Fugiat cum <mark>tempore</mark> asperiores <del>facilis</del>
+            <strong>alias</strong> <ins>sequi</ins> veritatis, <u>voluptate</u> natus ab quod!</p>
+        <pre>
     slslslslsl
     sllslslslsl
     slslslslslslsl
     slslslslslsss
 
 </pre>
-<p>Sulfuric acid is very explosive inorganic compound(H<sub>2</sub>S0<sub>4</sub>)</p>
+        <p>Sulfuric acid is very explosive inorganic compound(H<sub>2</sub>S0<sub>4</sub>)</p>
 
-2<sup>10</sup> = 1024
-
-
-
-<footer>
-    <small>Copyright 2021 | Asabeneh Yetayeh</small>
-</footer>
+        2<sup>10</sup> = 1024
+    </main>
+    <footer style="background-color:rgb(240, 168, 75);">
+        <small>Copyright 2021 | Asabeneh Yetayeh</small>
+    </footer>
 </body>
+
 </html>
