--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <html>
 
 <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Washera Academy the best online academy to learn coding" />
+    <meta name="kewords" content="HTML, CSS, JavaScrpt, React, Coding in Amharic" />
+    <meta name="author" content ="Washera Academy" />
     <title>Washera Academy | Static website</title>
+    <!-- CSS: Cascading Style Sheet -->
+
+ 
+    <script>
+        console.log('I just love programming')
+        console.log('This just great!')
+    </script>
+    <link rel='stylesheet' href ="./styles.css" />
+
 </head>
 
 <body>
     <!-- This header section section -->
-    <header style="background-color:rgb(240, 168, 75);">
+    <header>
         <h1 id="title-1" class="title" style="font-size:64px;">
             <span style="color:rgb(233, 101, 101)">
                 <strong>
