--- a/index.html
+++ b/index.html
@@ -4,99 +4,105 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Washera Academy the best online academy to learn coding" />
     <meta name="kewords" content="HTML, CSS, JavaScrpt, React, Coding in Amharic" />
-    <meta name="author" content ="Washera Academy" />
+    <meta name="author" content="Washera Academy" />
     <title>Washera Academy | Static website</title>
     <!-- CSS: Cascading Style Sheet -->
-
- 
-    <script>
-        console.log('I just love programming')
-        console.log('This just great!')
-    </script>
-    <link rel='stylesheet' href ="./styles.css" />
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
+    <link rel='stylesheet' href="./styles.css" />
 </head>
 
 <body>
     <!-- This header section section -->
-    <header>
-        <h1 id="title-1" class="title" style="font-size:64px;">
-            <span style="color:rgb(233, 101, 101)">
-                <strong>
-                    <em>Washera</em>
-                </strong>
-            </span>
-            <span style="color:rgb(81, 216, 81);">Academy</span>
-        </h1>
+    <div>
+        <header>
+            <h1 id="title-1" class="title" style="font-size:64px;">
+                <span style="color:rgb(233, 101, 101)">
+                    <strong>
+                        <em>Washera</em>
+                    </strong>
+                </span>
+                <span style="color:rgb(81, 216, 81);">Academy</span>
+            </h1>
 
-    </header>
-    <main>
+        </header>
+        <main>
+            <p>4 &gt; 3</p>
+            <p>3 &lt; 4</p>
+            <div>
+                <h1>Introduction</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, minus. Debitis laudantium,
+                    accusamus
+                    sed enim voluptatibus similique eius molestiae ducimus maiores, labore delectus, dolorem iste. Atque
+                    dignissimos obcaecati in fugiat!
+                </p>
 
-        <div>
-            <h1>Introduction</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, minus. Debitis laudantium, accusamus
-                sed enim voluptatibus similique eius molestiae ducimus maiores, labore delectus, dolorem iste. Atque
-                dignissimos obcaecati in fugiat!
+            </div>
+            <div>
+                <h1>Front end Technologies</h1>
+                <!-- List -->
+                <p>Frontend Technologies</p>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                </ul>
+                <p>The most popular JavaScript libraries</p>
+                <ol>
+                    <li>React</li>
+                    <li>Vue</li>
+                    <li>Angular</li>
+                </ol>
+            </div>
+
+            <div>
+                <h1>Backend Technologies</h1>
+                <p>Backend Technologies</p>
+                <ul>
+                    <li>Node</li>
+                    <li>Python</li>
+                    <li>PHP</li>
+                    <li>Java</li>
+                    <li>Ruby</li>
+                </ul>
+            </div>
+            <hr />
+            <p>Subscribe to our news letter</p>
+            <input type="email" /> <button>Submit</button>
+            <img src="./assets/images/html.png" style="width:10%;" alt="HTML Logo" />
+            <img src="./assets/images/css_logo.png" style="width:10%;" alt="CSS logo" />
+            <p>Lorem <em>ipsum dolor</em> sit, amet consectetur adipisicing elit. Earum illo <b>magnam</b> labore
+                mollitia
+                vel consequatur, in magni minus. Fugiat cum <mark>tempore</mark> asperiores <del>facilis</del>
+                <strong>alias</strong> <ins>sequi</ins> veritatis, <u>voluptate</u> natus ab quod!
             </p>
+            <pre>
+            slslslslsl
+            sllslslslsl
+            slslslslslslsl
+            slslslslslsss
+         </pre>
+            <p>Sulfuric acid is very explosive inorganic compound(H<sub>2</sub>S0<sub>4</sub>)</p>
 
-        </div>
-        <div>
-            <h1>Front end Technologies</h1>
-            <!-- List -->
-            <p>Frontend Technologies</p>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-            </ul>
-            <p>The most popular JavaScript libraries</p>
-            <ol>
-                <li>React</li>
-                <li>Vue</li>
-                <li>Angular</li>
-            </ol>
-        </div>
+            2<sup>10</sup> = 1024
+        </main>
 
-        <div>
-            <h1>Backend Technologies</h1>
-            <p>Backend Technologies</p>
-            <ul>
-                <li>Node</li>
-                <li>Python</li>
-                <li>PHP</li>
-                <li>Java</li>
-                <li>Ruby</li>
-            </ul>
-        </div>
-        <hr />
-        <p>Subscribe to our news letter</p>
-        <input type="email" /> <button>Submit</button>
-
-        <a href='https://github.com/Asabeneh' target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/asabeneh/" target="_blank">LinkedIn</a>
-        <a href="https://twitter.com/Asabeneh" target="_blank">Twitter</a>
-
-        <img src="./assets/images/html.png" style="width:10%;" alt="HTML Logo" />
-        <img src="./assets/images/css_logo.png" style="width:10%;" alt="CSS logo" />
-        <p>Lorem <em>ipsum dolor</em> sit, amet consectetur adipisicing elit. Earum illo <b>magnam</b> labore mollitia
-            vel consequatur, in magni minus. Fugiat cum <mark>tempore</mark> asperiores <del>facilis</del>
-            <strong>alias</strong> <ins>sequi</ins> veritatis, <u>voluptate</u> natus ab quod!</p>
-        <pre>
-    slslslslsl
-    sllslslslsl
-    slslslslslslsl
-    slslslslslsss
-
-</pre>
-        <p>Sulfuric acid is very explosive inorganic compound(H<sub>2</sub>S0<sub>4</sub>)</p>
-
-        2<sup>10</sup> = 1024
-    </main>
-    <footer style="background-color:rgb(240, 168, 75);">
-        <small>Copyright 2021 | Asabeneh Yetayeh</small>
+        <footer style="background-color:rgb(240, 168, 75);">
+            <div>
+                <a href='https://github.com/Asabeneh' target="_blank">
+                    <i class="fab fa-github-square"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/asabeneh/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://twitter.com/Asabeneh" target="_blank">
+                    <i class="fab fa-twitter-square"></i>
+                </a>
+            </div>
+            <small>Copyright &copy; 2021 | Asabeneh Yetayeh</small>
+    </div>
     </footer>
+    </div>
 </body>
 
 </html>
